[package]
name = "api"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.8", features = ["macros", "multipart", "ws"] }
tokio = { version = "1.42", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6.8", features = ["cors", "trace", "fs", "limit", "set-header"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.11", features = ["v7", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-native-tls", "postgres", "uuid", "chrono", "ipnetwork", "migrate"] }
validator = { version = "0.20", features = ["derive"] }
config = "0.15"
dotenvy = "0.15"
thiserror = "2.0"
async-trait = "0.1"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
ort = { version = "2.0.0-rc.11", features = ["ndarray", "download-binaries"] }
ndarray = "0.15"
image = { version = "0.25", features = ["jpeg", "png", "webp"] }
reqwest = { version = "0.13", features = ["json", "multipart"] }
bytes = "1.11"
sha2 = "0.10"
bcrypt = "0.17"
base64 = "0.22"
jsonwebtoken = { version = "10", features = ["rust_crypto"] }
lazy_static = "1.5"
regex = "1.11"
futures-util = "0.3"
aws-config = "1.1"
aws-sdk-s3 = "1.122"
redis = { version = "1.0", features = ["tokio-comp", "connection-manager", "tokio-native-tls-comp"] }
ts-rs = { version = "12.0", features = ["uuid-impl", "chrono-impl", "serde-compat"] }
aws-credential-types = "1.1"
http = "1.4.0"
[dev-dependencies]
mockall = "0.14"
